Fixup rendering of extra form in new ticket by staff

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -550,8 +550,10 @@ a.print {
     border-right:1px solid #ddd;
 }
 
-.form_table td:not(:empty) {
+.form_table td {
     border-bottom:1px solid #ddd;
+}
+.form_table td:not(:empty) {
     height: 20px;
 }
 
