--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1817,3 +1817,12 @@ table.custom-info td {
 .ui-datepicker {
     z-index: 100 !important;
 }
+.draft-saved {
+    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 4px 8px 6px;
+    border-radius: 3px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    line-height: 14px;
+}
