--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1826,3 +1826,7 @@ table.custom-info td {
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     line-height: 14px;
 }
+
+.delete-draft:hover {
+    background-color: #fc9f41 !important;
+}
