Move list table odd row styles to pure CSS

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -454,9 +454,9 @@ table.list tbody td {
 }
 
 table.list tbody td { background: #fff; padding: 1px; padding-left:2px; vertical-align: top; }
-table.list tbody tr.odd td { background-color: #f0faff; }
+table.list tbody tr:nth-child(2n+1) td { background-color: #f0faff; }
 table.list tbody tr:hover td { background: #ffe; }
-table.list tbody tr.odd:hover td { background: #ffd; }
+table.list tbody tr:nth-child(2n+1):hover td { background: #ffd; }
 /* row highlighting on hover + select */
 table.list tbody tr:hover td, table.list tbody tr.highlight td {  background: #FFFFDD; }
 /* disabled highlighting on nohover */
