Presort the topics alphabetically and save the`sort` column

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -530,7 +530,7 @@ a.print {
     color:#000;
 }
 
-#actions button, .button { padding:2px 5px 3px; margin-right:10px;  color:#777; font-weight:bold;}
+#actions button, .button { padding:2px 5px 3px; margin-right:10px;  color:#777;}
 
 .btn_sm {
     padding:2px 5px;
