--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -175,7 +175,7 @@ div#header a {
 }
 #nav li.active, #nav li.inactive:hover {
     border-radius:5px 5px 0 0;
-    box-shadow: 4px -3px 6px -4px rgba(0,0,0,0.3);
+    box-shadow: 4px -3px 6px -3px rgba(0,0,0,0.3);
     border-color: #c5d9ec;
     border-style: solid;
     border-width: 1px 1px 0 1px;
@@ -188,8 +188,7 @@ div#header a {
     background-color: #fbfbfb;
 }
 
-#nav .inactive ul {
-    display:none;
+#nav li.inactive > ul {
     width:230px;
     background:#fbfbfb;
     margin:0;
@@ -201,6 +200,17 @@ div#header a {
     border-left:1px solid #ccc;
     border-right:1px solid #ccc;
     border-radius: 0 0 5px 5px;
+
+    display:block;
+    padding-left: 5px;
+    -moz-box-shadow: 3px 3px 3px #ccc;
+    -webkit-box-shadow: 3px 3px 3px #ccc;
+    box-shadow: 3px 3px 3px #ccc;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear, opacity 0.1s linear;
 }
 
 #nav .inactive li {
@@ -211,13 +221,11 @@ div#header a {
     text-align:left;
 }
 
-#nav .inactive:hover ul {
-    display:block;
-    padding-left: 5px;
-    -moz-box-shadow: 3px 3px 3px #ccc;
-    -webkit-box-shadow: 3px 3px 3px #ccc;
-    box-shadow: 3px 3px 3px #ccc;
-    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+#nav li.inactive:hover > ul {
+
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 0.25s;
 }
 
 .ieshadow {
