i18n: Clients can elect an interface lang

--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -309,7 +309,7 @@ body {
   width: 400px;
   text-align: right;
   margin: 0;
-  padding: 10px 0;
+  padding: 10px 0 0;
   float: right;
 }
 #nav {
