yaml: Correctly parse Crowdin-created YAML
Crowdin recreates YAML files with indent specifications which Spyc does not
currently handle:

body: |2
  body contents written
  here with 2 leading spaces

This is part of the Yaml spec after 1.0

backportme

--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -1340,7 +1340,7 @@ time {
     overflow-y: auto;
 }
 
-.dialog .popup-loading {
+.dialog #popup-loading {
     position:absolute;
     text-align:center;
     background:rgba(255,255,255,0.8);
