--- a/scp/css/scp.css
+++ b/scp/css/scp.css
@@ -768,41 +768,6 @@ h2 .reload {
     margin:0;
 }
 
-#threads {
-    margin:0;
-    padding:5px 10px 0 10px;
-    border:1px solid #aaa;
-    background:#F4FAFF;
-    height:30px;
-}
-
-#threads li {
-    list-style:none;
-    margin:0;
-    padding:0;
-    display:inline;
-}
-
-#threads li a {
-    display:block;
-    width:auto;
-    float:left;
-    height:30px;
-    line-height:30px;
-    border-top:1px solid #F4FAFF;
-    padding:0 10px 0 32px;
-    margin-right:10px;
-}
-
-#threads li a.active {
-    height:29px;
-    background-color:#fff;
-    border:1px solid #aaa;
-    border-bottom:none;
-    border-top:2px solid #ed9100;
-    font-weight:bold;
-}
-
 #toggle_ticket_thread {
     background:url(../images/icons/open.gif) 10px 50% no-repeat;
 }
@@ -811,9 +776,7 @@ h2 .reload {
     background:url(../images/icons/note.gif) 10px 50% no-repeat;
 }
 
-#ticket_thread table.message,
-#ticket_thread table.response,
-#ticket_thread table.note {
+table.thread-entry {
     margin-top:10px;
     border:1px solid #aaa;
     border-bottom:2px solid #aaa;
@@ -825,7 +788,7 @@ h2 .reload {
     border-bottom:2px solid #ddd;
 }
 
-#ticket_thread table th, #ticket_notes table th {
+table.thread-entry th, #ticket_notes table th {
     text-align:left;
     border-bottom:1px solid #aaa;
     font-size:10pt;
@@ -853,15 +816,15 @@ h2 .reload {
     text-align:right;
 }
 
-#ticket_thread > .message th {
+.thread-entry.message th {
     background:#C3D9FF;
 }
 
-#ticket_thread > .response th {
+.thread-entry.response th {
     background:#FFE0B3;
 }
 
-#ticket_thread > .note th {
+.thread-entry.note th {
     background:#FFE;
 }
 
@@ -873,7 +836,7 @@ h2 .reload {
     background:#f9f9f9;
 }
 
-#ticket_thread .info, #ticket_notes .info {
+.thread-entry .info, #ticket_notes .info {
     padding:5px;
     background:#F4FAFF;
     height:16px;
@@ -945,6 +908,10 @@ ul.tabs li a.active {
     border:1px solid #aaa;
     border-top:2px solid #81a9d7;
     border-bottom:none;
+}
+
+ul.threads li a.active {
+    border-top:2px solid #ed9100 !important;
 }
 
 #response_options > form {
