--- a/assets/default.old/less/landing-page.less
+++ b/assets/default.old/less/landing-page.less
@@ -1,34 +1,18 @@
 #landing_page {
   #new_ticket {
     margin-top: 40px;
+    width: 295px;
     padding-left: 75px;
+    float: left;
     background: url('../images/new_ticket_icon.png') top left no-repeat;
-    h3 {
-      margin-bottom: 1em;
-    }
-    div {
-      height: 50px;
-      margin-bottom: 1em;
-    }
-    .button {
-      width: 100%;
-    }
   }
 
   #check_status {
     margin-top: 40px;
+    width: 295px;
     padding-left: 75px;
+    float: right;
     background: url('../images/check_status_icon.png') top left no-repeat;
-    h3 {
-      margin-bottom: 1em;
-    }
-    div {
-      height: 50px;
-      margin-bottom: 1em;
-    }
-    .button {
-      width: 100%;
-    }
   }
 }
 
