--- a/assets/default.old/less/ticket-forms.less
+++ b/assets/default.old/less/ticket-forms.less
@@ -1,16 +1,6 @@
 #ticketForm, #clientLogin {
-  table {
-    width: 100%;
-    label {
-      white-space: nowrap;
-    }
-    span {
-      input {
-        width: 100%;
-      }
-    }
-  }
   div {
+    clear: both;
     padding: 3px 0;
     overflow: hidden;
 
@@ -89,6 +79,7 @@
 
 #ticketTable {
   th {
+    width: 160px;
     font-weight: normal;
     text-align: left;
   }
@@ -99,7 +90,11 @@
 }
 
 #clientLogin {
-  background: url('../images/lock.png?1319655200') 95% 50% no-repeat #f6f6f6;
+  width: 400px;
+  margin-top: 20px;
+  padding: 10px 100px 10px 10px;
+  border: 1px solid #ccc;
+  background: url('../images/lock.png?1319655200') 440px 50% no-repeat #f6f6f6;
 
   p {
     clear: both;
@@ -135,7 +130,7 @@
   }
 
   table {
-    width: 100%;
+    width: 800px;
 
     td {
       vertical-align: top;
