--- a/assets/default.old/css/theme.css
+++ b/assets/default.old/css/theme.css
@@ -127,9 +127,9 @@ h1 {
 h3 {
   font-size: 16px;
 }
-h2 {
+h2, .subject {
   font-size: 16px;
-  color: #999;
+  color: black;
 }
 /* Helpers */
 .centered {
@@ -219,267 +219,7 @@ h2 {
   border: 1px solid #a00;
   background: url('../images/icons/error.png') 10px 50% no-repeat #fff0f0;
 }
-.warning {
-  background: #ffc;
-  font-style: italic;
-}
-.warning strong {
-  text-transform: uppercase;
-  color: #a00;
-  font-style: normal;
-}
-.error {
-  color: #f00;
-}
-.error input {
-  border: 1px solid #f00;
-}
-body {
-  background: url('../images/page_bg.png') top left repeat-x #c8c8c8;
-}
-#container {
-  background: #fff;
-  max-width: 840px;
-  margin: 0 auto;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-}
-#logo {
-  width: 220px;
-  height: auto;
-}
-.navbar {
-  min-height: 20px;
-}
-#nav {
-  margin: 0;
-}
-#nav li a {
-  padding: .3em 1em .3em 2.5em;
-  background-position: 10px 50%;
-  background-repeat: no-repeat;
-}
-#nav li a.home {
-  background-image: url('../images/icons/home.png');
-}
-#nav li a.kb {
-  background-image: url('../images/icons/kb.png');
-}
-#nav li a.new {
-  background-image: url('../images/icons/new.png');
-}
-#nav li a.status {
-  background-image: url('../images/icons/status.png');
-}
-#nav li a.tickets {
-  background-image: url('../images/icons/tix.png');
-}
-.navbar-toggle {
-  border: solid gray 1px;
-}
-.navbar-toggle span {
-  border: solid gray 1px;
-}
-#content {
-  padding: 20px 0;
-  margin: 0 20px;
-  height: auto !important;
-  height: 350px;
-  min-height: 350px;
-}
-#footer {
-  text-align: center;
-  font-size: 11px;
-  color: #333;
-}
-#footer a {
-  color: #333;
-}
-#footer p {
-  margin: 10px 0 0 0;
-}
-#footer #poweredBy {
-  display: block;
-  width: 126px;
-  height: 23px;
-  outline: none;
-  text-indent: -9999px;
-  margin: 0 auto;
-  background: url('../images/poweredby.png') top left no-repeat;
-  background-size: contain;
-}
-#landing_page #new_ticket {
-  margin-top: 40px;
-  padding-left: 75px;
-  background: url('../images/new_ticket_icon.png') top left no-repeat;
-}
-#landing_page #new_ticket h3 {
-  margin-bottom: 1em;
-}
-#landing_page #new_ticket div {
-  height: 50px;
-  margin-bottom: 1em;
-}
-#landing_page #new_ticket .button {
-  width: 100%;
-}
-#landing_page #check_status {
-  margin-top: 40px;
-  padding-left: 75px;
-  background: url('../images/check_status_icon.png') top left no-repeat;
-}
-#landing_page #check_status h3 {
-  margin-bottom: 1em;
-}
-#landing_page #check_status div {
-  height: 50px;
-  margin-bottom: 1em;
-}
-#landing_page #check_status .button {
-  width: 100%;
-}
-/* Landing page FAQ not yet implemented. */
-#faq {
-  clear: both;
-  margin: 0;
-  padding: 5px;
-}
-#faq ol {
-  font-size: 15px;
-  margin-left: 0;
-  padding-left: 0;
-  border-top: 1px solid #ddd;
-}
-#faq ol li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  color: #999;
-}
-#faq ol li a {
-  display: block;
-  padding: 5px 0;
-  height: auto !important;
-  overflow: hidden;
-  margin: 0;
-  border-bottom: 1px solid #ddd;
-  line-height: 16px;
-  padding-left: 24px;
-  background: url('../images/icons/page.png') 0 50% no-repeat;
-}
-#faq ol li a:hover {
-  background-color: #e9f5ff;
-}
-#faq .article-meta {
-  padding: 5px;
-  background: #fafafa;
-}
-/* Typography */
-a {
-  color: #0072bc;
-  text-decoration: none;
-}
-h1 {
-  color: #00AEEF;
-  font-weight: normal;
-  font-size: 20px;
-}
-h3 {
-  font-size: 16px;
-}
-h2 {
-  font-size: 16px;
-  color: #999;
-}
-/* Helpers */
-.centered {
-  text-align: center;
-}
-.clear {
-  clear: both;
-  height: 1px;
-  visibility: none;
-}
-.hidden {
-  display: none;
-}
-.faded {
-  color: #666;
-}
-/* Pagination */
-#pagination {
-  border: 0;
-  margin: 0 0 40px 0;
-  padding: 0;
-}
-#pagination li {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 11px;
-  list-style: none;
-  display: inline;
-}
-#pagination li a {
-  margin-right: 2px;
-  display: block;
-  float: left;
-  padding: 3px 6px;
-  text-decoration: none;
-}
-#pagination li a:hover {
-  color: #ff0084;
-}
-#pagination .previousOff,
-#pagination .nextOff {
-  color: #666;
-  display: block;
-  float: left;
-  font-weight: bold;
-  padding: 3px 4px;
-}
-#pagination .next a,
-#pagination .previous a {
-  font-weight: bold;
-}
-#pagination .active {
-  color: #000;
-  font-weight: bold;
-  margin-right: 2px;
-  display: block;
-  float: left;
-  padding: 3px 6px;
-  text-decoration: none;
-}
-/* Alerts & Notices */
-#msg_notice {
-  margin: 0;
-  padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #0a0;
-  background: url('../images/icons/ok.png') 10px 50% no-repeat #e0ffe0;
-}
-#msg_warning {
-  margin: 0;
-  padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #f26522;
-  background: url('../images/icons/alert.png') 10px 50% no-repeat #ffffdd;
-}
-#msg_error {
-  margin: 0;
-  padding: 5px 10px 5px 36px;
-  height: 16px;
-  line-height: 16px;
-  margin-bottom: 10px;
-  border: 1px solid #a00;
-  background: url('../images/icons/error.png') 10px 50% no-repeat #fff0f0;
-}
+#msg_info { margin: 0; padding: 5px; margin-bottom: 10px; color: #3a87ad; border: 1px solid #bce8f1;  background-color: #d9edf7; }
 .warning {
   background: #ffc;
   font-style: italic;
@@ -501,7 +241,7 @@ h2 {
   display: inline-block;
   font-size: 16px;
   padding: 8px 16px 6px 16px;
-  width: 160px;
+  max-width: 220px;
   text-align: center;
   color: #fff;
   font-weight: bold;
@@ -544,32 +284,283 @@ h2 {
 .blue.button:hover {
   background-color: #0299d2;
 }
-#ticketForm table,
-#clientLogin table {
-  width: 100%;
+body {
+  background: url('../images/page_bg.png') top left repeat-x #c8c8c8;
 }
-#ticketForm table label,
-#clientLogin table label {
-  white-space: nowrap;
+#container {
+  background: #fff;
+  width: 840px;
+  margin: 0 auto;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
-#ticketForm table span input,
-#clientLogin table span input {
-  width: 100%;
+#header {
+  position: relative;
+  height: 71px;
+  padding: 0 20px;
 }
-#ticketForm div,
-#clientLogin div {
+#logo {
+    height: 100%;
+}
+#header #logo img {
+  max-height: 65px;
+  max-width: 380px;
+  width: auto;
+  height: auto;
+  vertical-align: middle;
+}
+.valign-helper {
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+}
+#header p {
+  width: 400px;
+  margin: 0;
+  padding: 10px 0 0;
+}
+#nav {
+  margin: 0 20px;
+  padding: 2px 10px;
+  height: 20px;
+  background: url('../images/nav_bg.png') top left repeat-x;
+  border-top: 1px solid #aaa;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 0 3px 2px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: 0 3px 2px rgba(0, 0, 0, 0.4);
+}
+#nav li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: inline;
+}
+#nav li a {
+  display: inline-block;
+  width: auto;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  padding: 0 10px 0 32px;
+  margin-left: 10px;
+  color: #333;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  background-position: 10px 50%;
+  background-repeat: no-repeat;
+}
+.rtl #nav li a {
+  background-position: right center;
+  background-position: calc(100% - 10px) center;
+  padding-left: 10px;
+  padding-right: 32px;
+  margin-right: 10px;
+  margin-left: 0;
+}
+#nav li a.active,
+#nav li a:hover {
+  background-color: #dbefff;
+  color: #000;
+}
+#nav li a:hover {
+  background-color: #ededed;
+  color: #0054a6;
+}
+#nav li a.home {
+  background-image: url('../images/icons/home.png');
+}
+#nav li a.kb {
+  background-image: url('../images/icons/kb.png');
+}
+#nav li a.new {
+  background-image: url('../images/icons/new.png');
+}
+#nav li a.status {
+  background-image: url('../images/icons/status.png');
+}
+#nav li a.tickets {
+  background-image: url('../images/icons/tix.png');
+}
+#content {
+  padding: 20px 0;
+  margin: 0 20px;
+  height: auto !important;
+  height: 350px;
+  min-height: 350px;
+}
+#footer {
+  text-align: center;
+  font-size: 11px;
+  color: #333;
+}
+#footer a {
+  color: #333;
+}
+#footer p {
+  margin: 10px 0 0 0;
+}
+#footer #poweredBy {
+  display: block;
+  width: 126px;
+  height: 23px;
+  outline: none;
+  text-indent: -9999px;
+  margin: 0 auto;
+  background: url('../images/poweredby.png') top left no-repeat;
+  background-size: auto 20px;
+}
+.front-page-button {
+}
+#landing_page #new_ticket {
+  margin-top: 40px;
+  background: url('../images/new_ticket_icon.png') top left no-repeat;
+}
+#landing_page #new_ticket,
+#landing_page #check_status,
+.front-page-button {
+  width: 295px;
+  padding-left: 75px;
+}
+#landing_page #check_status {
+  margin-top: 40px;
+  background: url('../images/check_status_icon.png') top left no-repeat;
+}
+.rtl #landing_page #new_ticket,
+.rtl #landing_page #check_status,
+.rtl .front-page-button {
+  padding-left: 0;
+  padding-right: 75px;
+  background-position: top right;
+}
+/* Landing page FAQ not yet implemented. */
+#faq {
+  clear: both;
+  margin: 0;
+  padding: 5px;
+}
+#faq ol {
+  font-size: 15px;
+  margin-left: 0;
+  padding-left: 0;
+  border-top: 1px solid #ddd;
+}
+#faq ol li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: #999;
+}
+#faq ol li a {
+  display: block;
+  padding: 5px 0;
+  height: auto !important;
+  overflow: hidden;
+  margin: 0;
+  border-bottom: 1px solid #ddd;
+  line-height: 16px;
+  padding-left: 24px;
+  background: url('../images/icons/page.png') 0 50% no-repeat;
+}
+#faq ol li a:hover {
+  background-color: #e9f5ff;
+}
+#faq .article-meta {
+  padding: 5px;
+  background: #fafafa;
+}
+#kb {
+  margin: 2px 0;
+  padding: 5px;
+  overflow: hidden;
+}
+#kb > li {
+  padding: 10px;
+  height: auto !important;
+  overflow: hidden;
+  margin: 0;
+  background: url(../images/kb_category_bg.png) bottom left repeat-x;
+  border-bottom: 1px solid #ddd;
+}
+#kb > li h4 {
+  padding-bottom: 3px;
+  margin-bottom: 3px;
+}
+#kb > li h4 span {
+  color: #666;
+}
+#kb > li h4 a {
+  font-size: 14px;
+}
+#kb li i {
+  display: block;
+  width: 32px;
+  height: 32px;
+  float: left;
+  margin-right: 6px;
+  background: url(../images/kb_large_folder.png) top left no-repeat;
+}
+#kb-search {
+  padding: 10px 0;
+  overflow: hidden;
+}
+#kb-search div {
+  clear: both;
+  overflow: hidden;
+  padding-top: 5px;
+}
+#kb-search #query {
+  margin: 0;
+  display: inline-block;
+  float: left;
+  width: 200px;
+  margin-right: 5px;
+}
+#kb-search #cid {
+  margin: 0;
+  display: inline-block;
+  float: left;
+  width: 200px;
+  margin-right: 5px;
+  position: relative;
+  top: 2px;
+}
+#kb-search #topic-id {
+  margin: 0;
+  display: inline-block;
+  float: left;
+  width: 410px;
+}
+#kb-search #searchSubmit {
+  margin: 0;
+  display: inline-block;
+  float: left;
+  position: relative;
+  top: 2px;
+}
+#kb-search #breadcrumbs {
+  color: #333;
+  margin-bottom: 15px;
+}
+#kb-search #breadcrumbs #breadcrumbs a {
+  color: #555;
+}
+#ticketForm div.clear,
+#clientLogin div.clear {
+  clear: both;
   padding: 3px 0;
   overflow: hidden;
 }
 #ticketForm div label,
 #clientLogin div label {
   display: block;
-  width: 140px;
-  float: left;
+}
+label.required {
+  font-weight: bold;
 }
 #ticketForm div label.required,
 #clientLogin div label.required {
-  font-weight: bold;
   text-align: left;
 }
 #ticketForm div input,
@@ -579,9 +570,7 @@ h2 {
   width: auto;
   border: 1px solid #aaa;
   background: #fff;
-  margin-right: 10px;
   display: block;
-  float: left;
 }
 #ticketForm div input[type=file],
 #clientLogin div input[type=file] {
@@ -600,6 +589,15 @@ h2 {
 #clientLogin div div.captchaRow input {
   position: relative;
   top: 6px;
+}
+#ticketForm > table {
+    table-layout: fixed;
+}
+#ticketForm > table td {
+    width: 160px;
+}
+#ticketForm > table td + td {
+    width: auto;
 }
 #ticketForm td textarea,
 #clientLogin td textarea,
@@ -640,6 +638,7 @@ h2 {
   color: #a00;
 }
 #ticketTable th {
+  padding-left: 3px;
   font-weight: normal;
   text-align: left;
 }
@@ -649,25 +648,49 @@ h2 {
   text-align: left;
 }
 #clientLogin {
+    display: block;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
   background: url('../images/lock.png?1319655200') 95% 50% no-repeat #f6f6f6;
+}
+.rtl #clientLogin {
+    background-position: 5% 50%;
+}
+#clientLogin .instructions {
+    display:table-cell;
+    padding-left: 2em;
+    padding-right:90px;
+}
+.rtl #clientLogin .instructions {
+    padding-left: 0;
+    padding-right:0;
+    padding-right: 2em;
+    padding-left:90px;
 }
 #clientLogin p {
   clear: both;
-  text-align: center;
 }
 #clientLogin strong {
   font-size: 11px;
   color: #d00;
   display: block;
-  padding-left: 140px;
 }
-#clientLogin #email {
-  width: 250px;
-  margin-right: 0;
-}
+#clientLogin #email,
 #clientLogin #ticketno {
-  width: 120px;
   margin-right: 0;
+}
+#clientLogin input[type=text],
+#clientLogin input[type=password] {
+    padding: 5px;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
+#clientLogin input[type=submit] {
+    padding: 3px 10px;
+    border-radius: 4px;
 }
 #reply {
   margin-top: 20px;
@@ -678,8 +701,8 @@ h2 {
 #reply h2 {
   margin-bottom: 10px;
 }
-#reply table {
-  width: 100%;
+#reply > table {
+  width: auto;
 }
 #reply table td {
   vertical-align: top;
@@ -691,25 +714,6 @@ h2 {
 #reply #response_options textarea {
   border: 1px solid #aaa;
   background: #fff;
-}
-#reply .attachments .uploads div {
-  display: inline-block;
-  padding-right: 20px;
-}
-#reply .file {
-  display: inline-block;
-  padding-left: 20px;
-  margin-right: 20px;
-  background: url('../images/icons/file.gif') 0 50% no-repeat;
-}
-.uploads {
-  display: inline-block;
-  padding-right: 20px;
-}
-.uploads label {
-  padding: 3px;
-  padding-right: 10px;
-  width: auto !important;
 }
 /* Ticket icons */
 .Icon {
@@ -732,9 +736,10 @@ h2 {
 .Icon.phoneTicket {
   background-image: url('../images/icons/ticket_source_phone.gif');
 }
-.Icon.otherTicket {
+.Icon.otherTicket, .Icon.apiTicket  {
   background-image: url('../images/icons/ticket_source_other.gif');
 }
+
 .Icon.attachment {
   background-image: url('../images/icons/attachment.gif');
 }
@@ -753,7 +758,9 @@ h2 {
   text-decoration: underline;
 }
 #ticketTable {
-  width: 100%;
+  border: 1px solid #aaa;
+  border-left: none;
+  border-bottom: none;
 }
 #ticketTable caption {
   padding: 5px;
@@ -767,12 +774,22 @@ h2 {
 #ticketTable th {
   height: 24px;
   line-height: 24px;
+  background: #e1f2ff;
+  border: 1px solid #aaa;
+  border-right: none;
+  border-top: none;
 }
 #ticketTable th a {
   color: #000;
 }
 #ticketTable td {
   padding: 2px;
+  border: 1px solid #aaa;
+  border-right: none;
+  border-top: none;
+}
+#ticketTable tr.alt td {
+  background: #f9f9f9;
 }
 #ticketSearchForm {
   display: inline-block;
@@ -800,8 +817,8 @@ a.refresh {
 .infoTable th {
   text-align: left;
 }
-#ticketThread table {
-  width: 100%;
+#ticketThread table.response,
+#ticketThread table.message {
   margin-top: 10px;
   border: 1px solid #aaa;
   border-bottom: 2px solid #aaa;
@@ -816,9 +833,6 @@ a.refresh {
   font-weight: normal;
   color: #888;
   padding-left: 20px;
-}
-#ticketThread table td {
-  padding: 5px;
 }
 #ticketThread .message th {
   background: #d8efff;
@@ -841,4 +855,95 @@ a.refresh {
   line-height: 16px;
   background-position: 0 50%;
   background-repeat: no-repeat;
+}
+.action-button {
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+  color: #777 !important;
+  display: inline-block;
+  border: 1px solid #aaa;
+  cursor: pointer;
+  font-size: 11px;
+  height: 18px;
+  overflow: hidden;
+  background-color: #dddddd;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #efefef), color-stop(100% #dddddd));
+  background-image: -webkit-linear-gradient(top, #efefef 0%, #dddddd 100%);
+  background-image: -moz-linear-gradient(top, #efefef 0%, #dddddd 100%);
+  background-image: -ms-linear-gradient(top, #efefef 0%, #dddddd 100%);
+  background-image: -o-linear-gradient(top, #efefef 0%, #dddddd 100%);
+  background-image: linear-gradient(top, #efefef 0%, #dddddd 100%);
+  padding: 0 5px;
+  text-decoration: none;
+  line-height:18px;
+  float:right;
+  margin-left:5px;
+}
+.action-button span,
+.action-button a {
+  color: #777 !important;
+  display: inline-block;
+  float: left;
+}
+.action-button a {
+  color: #777;
+  text-decoration: none;
+}
+table.padded tr > td,
+table.padded tr > th {
+  height: 20px;
+  padding-bottom: 5px;
+}
+
+.external-auth + .external-auth {
+    margin-top: 4px;
+}
+
+a.external-sign-in {
+    text-decoration: none;
+}
+.external-auth-box {
+    vertical-align: middle;
+    border-radius: 4px;
+    border: 1px solid #777;
+}
+.external-auth-icon {
+    display: inline-block;
+    color: #333;
+    width: 30px;
+    padding: 5px 10px;
+    border-right: 1px solid #ddd;
+}
+.external-auth-name {
+    color: #333;
+    width: 100px;
+    padding: 5px 10px;
+    line-height:30px;
+    font-size: 11pt;
+}
+img.sign-in-image {
+    border: none;
+    max-height: 40px;
+    max-width: 200px;
+    width: auto;
+    height: auto;
+}
+.login-box {
+    width:40%;
+    display:table-cell;
+    box-shadow: 12px 0 15px -15px rgba(0,0,0,0.4);
+    padding:15px;
+}
+.rtl .login-box {
+    box-shadow: -12px 0 15px -15px rgba(0,0,0,0.4);
+}
+.flush-right {
+    text-align: right;
+}
+.flush-left {
+    text-align: left;
 }
