--- a/assets/default.old/less/main-layout.less
+++ b/assets/default.old/less/main-layout.less
@@ -4,29 +4,73 @@ body {
 
 #container {
   background: #fff;
-  max-width: 840px;
+  width: 840px;
   margin: 0 auto;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-#logo {
-  width: 220px;
-  height: auto;
-}
-  
-.navbar {
-  min-height: 20px;
+#header {
+  position: relative;
+  height: 71px;
+  padding: 0 20px;
+
+  #logo {
+    width: 220px;
+    height: 71px;
+    float: left;
+  }
+
+  p {
+    width: 400px;
+    text-align: right;
+    margin: 0;
+    padding: 10px 0;
+    float: right;
+  }
 }
 
 #nav {
-  margin: 0;
+  margin: 0 20px;
+  padding: 2px 10px;
+  height: 20px;
+  background: url('../images/nav_bg.png') top left repeat-x;
+  border-top: 1px solid #aaa;
+  box-shadow:0 3px 2px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow:0 3px 2px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow:0 3px 2px rgba(0, 0, 0, 0.4);
+
   li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: inline;
     a {
-      padding: .3em 1em .3em 2.5em;
+      display: block;
+      width: auto;
+      float: left;
+      height: 20px;
+      line-height: 20px;
+      text-align: center;
+      padding: 0 10px 0 32px;
+      margin-left: 10px;
+      color: #333;
+      border-radius: 20px;
+      -webkit-border-radius: 20px;
+      -moz-border-radius: 20px;
       background-position: 10px 50%;
       background-repeat: no-repeat;
+    }
+
+    a.active, a:hover {
+      background-color: #dbefff;
+      color: #000;
+    }
+
+    a:hover {
+      background-color: #ededed;
+      color: #0054a6;
     }
 
     a.home    { background-image: url('../images/icons/home.png'); }
@@ -34,13 +78,6 @@ body {
     a.new     {  background-image: url('../images/icons/new.png'); }
     a.status  { background-image: url('../images/icons/status.png'); }
     a.tickets { background-image: url('../images/icons/tix.png'); }
-  }
-}
-
-.navbar-toggle {
-  border: solid gray 1px;
-  span {
-    border: solid gray 1px;
   }
 }
 
@@ -73,6 +110,5 @@ body {
     text-indent: -9999px;
     margin: 0 auto;
     background: url('../images/poweredby.png') top left no-repeat;
-    background-size: contain;
   }
 }
