--- a/assets/default/less/landing-page.less
+++ b/assets/default/less/landing-page.less
@@ -1,34 +1,20 @@
 #landing_page {
-  #new_ticket {
+  #new_ticket, #check_status {
     margin-top: 40px;
     padding-left: 75px;
-    background: url('../images/new_ticket_icon.png') top left no-repeat;
     h3 {
       margin-bottom: 1em;
     }
     div {
       height: 50px;
-      margin-bottom: 1em;
-    }
-    .button {
-      width: 100%;
+      margin-bottom: 2em;
     }
   }
-
+  #new_ticket {
+    background: url('../images/new_ticket_icon.png') top left no-repeat;
+  }
   #check_status {
-    margin-top: 40px;
-    padding-left: 75px;
     background: url('../images/check_status_icon.png') top left no-repeat;
-    h3 {
-      margin-bottom: 1em;
-    }
-    div {
-      height: 50px;
-      margin-bottom: 1em;
-    }
-    .button {
-      width: 100%;
-    }
   }
 }
 
