--- a/assets/default/less/main-layout.less
+++ b/assets/default/less/main-layout.less
@@ -1,30 +1,17 @@
-body {
-  background: url('../images/page_bg.png') top left repeat-x #c8c8c8;
-}
-
 #container {
-  background: #fff;
   max-width: 840px;
   margin: 0 auto;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-  -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-#logo {
-  width: 220px;
-  height: auto;
-}
-  
-.navbar {
-  min-height: 20px;
+.navbar img {
+  height: 50px;
+  margin-top: -1em;
 }
 
 #nav {
-  margin: 0;
   li {
     a {
-      padding: .3em 1em .3em 2.5em;
+      padding-left: 2.5em;
       background-position: 10px 50%;
       background-repeat: no-repeat;
     }
@@ -44,22 +31,8 @@ body {
   }
 }
 
-#content {
-  padding: 20px 0;
-  margin: 0 20px;
-  height: auto !important;
-  height: 350px;
-  min-height: 350px;
-}
-
 #footer {
   text-align: center;
-  font-size: 11px;
-  color: #333;
-
-  a {
-    color: #333;
-  }
 
   p {
     margin: 10px 0 0 0;
