More progression towards bootstrap completion

--- a/assets/default/less/ticket.less
+++ b/assets/default/less/ticket.less
@@ -4,7 +4,6 @@
   padding-left: 20px;
   background-position: top left;
   background-repeat: no-repeat;
-  color: #006699;
   text-decoration: none;
 }
 
@@ -30,30 +29,6 @@
 
 #ticketTable {
   width: 100%;
-
-  caption {
-    padding: 5px;
-    text-align: left;
-    color: #000;
-    background: #ddd;
-    border: 1px solid #aaa;
-    border-bottom: none;
-    font-weight: bold;
-  }
-
-  th {
-    height: 24px;
-    line-height: 24px;
-
-    a {
-      color: #000;
-    }
-  }
-
-  td {
-    padding: 2px;
-  }
-
 }
 
 #ticketSearchForm {
@@ -79,9 +54,9 @@ a.refresh {
 }
 
 .infoTable {
-  background: #F4FAFF;
   th {
     text-align: left;
+    white-space: nowrap;
   }
 }
 
