--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -118,6 +118,21 @@ h2 {
 .error input {
   border: 1px solid #f00;
 }
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  margin: 0;
+  background: -webkit-linear-gradient(#ffffff, #c8c8c8);
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(#ffffff, #c8c8c8);
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(#ffffff, #c8c8c8);
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(#ffffff, #c8c8c8);
+  /* Standard syntax */
+}
 #container {
   max-width: 840px;
   margin: 0 auto;
