--- a/assets/default/less/base.less
+++ b/assets/default/less/base.less
@@ -19,11 +19,6 @@ h2 {
   color: #999;
 }
 
-/* Helpers */
-.centered { text-align: center;}
-
-.hidden { display: none;}
-
 /* Pagination */
 #pagination {
   border: 0;
@@ -70,26 +65,20 @@ h2 {
 
 /* Alerts & Notices */
 
-#msg_notice { margin: 0; padding: 5px 10px 5px 36px; height: 16px; line-height: 16px; margin-bottom: 10px; border: 1px solid #0a0; background: url('../images/icons/ok.png') 10px 50% no-repeat #e0ffe0; }
-
-#msg_warning { margin: 0; padding: 5px 10px 5px 36px; height: 16px; line-height: 16px; margin-bottom: 10px; border: 1px solid #f26522; background: url('../images/icons/alert.png') 10px 50% no-repeat #ffffdd; }
-
-#msg_error { margin: 0; padding: 5px 10px 5px 36px; height: 16px; line-height: 16px; margin-bottom: 10px; border: 1px solid #a00; background: url('../images/icons/error.png') 10px 50% no-repeat #fff0f0; }
-
-
-.warning {
-  background: #ffc;
-  font-style: italic;
-  strong {
-    text-transform: uppercase;
-    color: #a00;
-    font-style: normal;
-  }
+#msg_notice { 
+  margin-top: 1em;
+  padding: 5px 10px 5px 36px; 
+  background: url('../images/icons/ok.png') 10px 50% no-repeat #e0ffe0;
 }
 
-.error {
-  color:#f00;
-  input {
-    border:1px solid #f00;
-  }
+#msg_warning { 
+  margin-top: 1em;
+  padding: 5px 10px 5px 36px;
+  background: url('../images/icons/alert.png') 10px 50% no-repeat #ffffdd;
+}
+
+#msg_error {
+  margin-top: 1em;
+  padding: 5px 10px 5px 36px;
+  background: url('../images/icons/error.png') 10px 50% no-repeat #fff0f0;
 }
