Cleanup ticket form styling

--- a/assets/default/less/ticket-forms.less
+++ b/assets/default/less/ticket-forms.less
@@ -1,7 +1,9 @@
 #ticketForm, #clientLogin {
-    label.required {
+    label {
+    text-align: left;
+      .required {
         font-weight: bold;
-        text-align: left;
+      }
     }
     
     input[type=file] {
