--- a/assets/default/css/theme.css
+++ b/assets/default/css/theme.css
@@ -199,10 +199,13 @@ body {
   width: 100%;
   margin-bottom: .5em;
 }
-#ticketForm label.required,
-#clientLogin label.required {
-  font-weight: bold;
+#ticketForm label,
+#clientLogin label {
   text-align: left;
+}
+#ticketForm label .required,
+#clientLogin label .required {
+  font-weight: bold;
 }
 #ticketForm input[type=file],
 #clientLogin input[type=file] {
